--- a/Site/index (Copie en conflit de Vincent EVEN 2015-04-08).html
+++ b/Site/index (Copie en conflit de Vincent EVEN 2015-04-08).html
@@ -52,7 +52,7 @@
 			<li> <a href="#team" class="smoothScroll">L'équipe</a></li>
 			<li> <a href="#cartographie" class="smoothScroll">Cartograhie</a></li>
 			<li> <a href="#acteurs" class="smoothScroll">Présentation des acteurs</a></li>
-			<li> <a href="#interview" class="smoothScroll">Interwiews/Sondage</a></li>
+			<li> <a href="#interview" class="smoothScroll">Interviews/Sondage</a></li>
 			<li> <a href="#lexique" class="smoothScroll">Lexique</a></li>
 			<li> <a href="#contact" class="smoothScroll"> Contact</a></li>
         </div><!--/.nav-collapse -->
@@ -86,7 +86,7 @@
 				<div class="col-lg-12 centered">
 					<p><h3>"La publicité est le carburant de l'économie numérique" CNIL</h3></p>
 				</div><!-- col-lg-12 -->
-
+				
 			</div><!-- row -->
 		</div><!-- container -->
 	</div>
@@ -201,7 +201,7 @@ Ainsi en 2009, la géante entreprise Google avait émis l'idée de mettre en pla
 
 Notamment dans son service Gmail : « Vous pouvez voir des annonces textuelles ou illustrées dans Gmail lorsque vous lisez vos messages. Les annonces que vous voyez peuvent être basées sur les mêmes critères que celles qui sont diffusées sur les pages de recherche Google, ainsi que sur d'autres critères, tels que les messages contenus dans votre messagerie » En clair, Google scrute les messages que nous envoyons afin d'en proposer les meilleures publicités pour nous.<br><br>
 
-Résultat :
+Résultat : 
 <li style="margin-right:365px">publicité en ligne en hausse de 6.3% en 2012 notamment.</li>
 
 <li style="margin-right:200px">67% de chiffre d'affaire en plus pour Google et Youtube grâce à la publicité ciblée.</li>
@@ -261,7 +261,7 @@ Le G29 (qui regroupe les CNIL (Commission Nationale de l'Informatique et des Lib
 
 <li style="margin-left:271px;text-align:left;">Mettre en place un outil accessible aux membres et aux non membres, sur la page d’accueil des réseaux sociaux, permettant de déposer des plaintes relatives à la vie privée.</li> </p>
 <p  style="color:black;text-align:left;">
-Enfin, chaque site utilisant le système de traçage par cookies doit prévenir ses utilisateurs par une bannière ou un message notant l'utilisation de cookies.
+Enfin, chaque site utilisant le système de traçage par cookies doit prévenir ses utilisateurs par une bannière ou un message notant l'utilisation de cookies. 
 			</p>
 			</div>
 
@@ -278,15 +278,22 @@ Enfin, chaque site utilisant le système de traçage par cookies doit prévenir 
 				<hr>
 				<div class="col-lg-12 centered">
 				<p  style="color:black;text-align:left;">
+					De nombreuses associations mais aussi la CNIL conseillent aux utilisateurs ne voulant pas laisser de données personnelles :<br>
+
+<li style="text-align:left;">Utilisation de bloqueurs de pubs (tels qu'AdBlock). Les publicités sont les plus gênantes sur les ordinateurs, il y aurait 20% d'utilisateur d'ad block en France. Les annonceurs développent une nouvelle méthode pour bloquer ce genre de technique.<a href="#nopub" class="smoothScroll">En général les utilisateurs ne veulent pas d'abonnements pour ne pas avoir de publicités.</a></li>
+
+<li style="text-align:left;">Utilisation de logiciel effaceur de cookies (tel que Ccleaner) qui permettent aux utilisateurs d'effacer toute trace interne de leur passage sur Internet. Mais cela n'est pas suffisant. (Lien vers sondage)</li>
+
+<li style="text-align:left;">Navigation en mode privée qui s'abstient de toute trace de notre passage (mémoire, données, historique etc...)</li> 
 			</p>
 			</div>
 
 			</div><!-- row -->
 		</div><!-- container -->
 
-
+		
 		<!-- ==== PORTFOLIO ==== -->
-
+		
 		<div id="cartographie" name="cartographie">
 		<div id"greywrap">
 		<h1 class="centered">CARTOGRAPHIE</h1>
@@ -436,41 +443,7 @@ Enfin, chaque site utilisant le système de traçage par cookies doit prévenir 
 				</div><!-- col-lg-6 -->
 			</div>
 		</div>
-		<h3 class="centered" style="color:black;">Interview d'un professeur d'informatique/réseaux de l'ISEN Brest</h3>
-			<hr>
-			<br> Nous avons approché un professeur de l'ISEN afin de s'interroger sur l'efficacité du filtrage de
-publicités sur un réseau moyen tel que l'ENT de l'ISEN Brest. <br>
-
-
-<br> - Vous devez sûrement faire face à de nombreuses publicités affectant les adresses mails.
-Pouvez-vous nous donnez un ordre d'idée de ce chiffre ?<br>
-
-<br> « Il n'est pas si important que ça. C'est assez difficile d'être sûr que les messages qui arrivent sont des messages publicitaires, des virus ou des messages de phishing (hameçonnage). Les différents outils qui permettent d'identifier ces messages vont rarement les bloquer véritablement. C'est comme si on allait dans votre boite aux lettres, qu'on prenait du courrier et qu'on le mettait à la poubelle. On peut quand même être sûr sur certains points que ce soit un spam, quand il y a vraiment trop de critères validés.<br>
-
-<br> Par exemple, sur 1017 messages qui sont passés en une journée environ, 30 ont été bloqués comme étant des spams , 84 ont été considérés comme des spams mais qui sont passés , 44  ont été considérés comme suspects, avec des problèmes dans leur protocole, et n'ont pas été bloqués, et 860 qui sont passés comme étant bons.
-Donc, ça fait à peu près 10% des messages qui sont analysés comme spams, mais ça ne veut pas dire que tout a été filtré. Encore ce matin on a reçu un message de phishing. C'est difficile de se faire une idée.»<br>
-
-<br> Quelles sont les principales publicités auxquelles vous avez affaire ?<br>
-
-<br> « Je ne regarde même pas les mails publicitaires que je reçois. Il y a de tout et n'importe quoi. »<br>
-
-<br> Savez vous comment les données sont récupérées sur internet ,dans le but d'envoyer des publicités ciblées ?<br>
-
-<br> « Soit ils (annonceurs) peuvent aspirer des sites web et récupérer les adresses mails s'il y en a, soit en envoyant des virus , des chevaux de trois qui permettent de récupérer l'information. La plupart des sociétés ne vont pas se servir d'outils techniques mais vont plutôt les acheter à quelqu'un d'autre qui les a récupérés à leur place . Je ne pense pas que ça se vend si cher que ça. Sur le web, on doit pouvoir acheter des fichiers entiers de données , d'adresses mails. On doit pouvoir en acheter de manières plus autorisées comme à Google ou à Facebook.
-Vous utilisez majoritairement tous les services de Google, ils savent donc tout sur vous. Chaque fois que vous surfer sur un site, que vous tapez une info, ils vont tout réutiliser. Pareil pour Facebook. Ils peuvent même s'échanger les données entre eux. Je ne sais pas jusqu'à quel niveau ça peut aller. Mais de toute façon, c'est en vous faisant signer les pages de conditions générales de leur site, qui changent régulièrement et que vous n'allez pas relire, qu'ils obtiennent le droit d'utiliser vos informations. »<br>
-
-<br> - Quelles sont les mesures que vous prenez techniquement afin d'éviter ce "spam" de
-publicités ?<br>
-
-<br> « Ce sont des techniques qui sont utilisées sur tous les serveurs de messagerie, avec un filtrage. Quand les messages arrivent, ils sont filtrés et passent par un anti-virus. Ceci n'est pas pour les publicités mais pour les problèmes de sécurité. Ils passent ensuite par un autre système  « anti -spams » qui va analyser le contenu des messages et s'il trouve des mots clés ou qu'il vient d'un endroit supposé être des spammeurs, ils accumulent les points. Lorsque les anomalies dépassent un certain niveau, le message sera considéré comme un spam. Il sera envoyé tagué ou pas du tout envoyé à partir d'un niveau plus élevé.
-Vous avez aussi ce que l'on appelle des hors limites black list. A chaque fois qu'un message arrive, on va demander à un site extérieur pour savoir si c'est un spam ou non. Si vous êtes sur une hors limite black list , provenant d'un serveur de messagerie connu pour envoyer des spams, à ce moment là vous n'accepterez pas les messages provenant de lui. On bloque tout ça. »<br>
-
-<br> - Que conseillerez-vous aux personnes voulant interagir le moins possible avec les publicités
-dites ciblées ?<br>
-
-<br> « (rire) De toute façon, les publicités liées à Google , à moins que vous vouliez utiliser autre chose, ce qui est difficile, car le moteur de recherche est relativement bon, vous n'y échappez pas. Après il y a d'autre alternative, pour les mails, il vaut mieux avoir plusieurs adresses mails . Par exemple, vous utilisez une adresse mail pour acheter un billet d'avion et une autre à usage personnel. De toute façon, vous voyez bien que quand vous vous enregistrez quelque part, généralement vous recevez des rafales de spams par la suite. Ou alors vous écrivez des cartes postales ou des lettres (rire). »<br>
 		</div>
-
 
 		<!-- ==== BLOG ==== -->
 		<!--<div class="container" id="blog" name="blog">
