--- a/Site/index.html
+++ b/Site/index.html
@@ -543,27 +543,27 @@ Enfin, chaque site utilisant le système de traçage par cookies doit prévenir 
 <br><li><b><FONT color="red">Régies publicitaires</FONT></b></li>
 <br><li><b><FONT color="blue">Fournisseurs de contenu / Sociétés d'Internet</FONT></b></li>
 <br><li><b><FONT color="green">Autres sites web / Interfaces de navigation</FONT></b></li>
-<br><li><FONT color="magenta">Bloqueurs de publicités</FONT></b></li>
-<br><li><FONT color="violet">Utilisateurs</FONT></b></li><br>
+<br><li><b><FONT color="magenta">Bloqueurs de publicités</FONT></b></li>
+<br><li><b><FONT color="violet">Utilisateurs</FONT></b></li><br>
 
-<br><b>Gouvernement :</b><br>
+<br><b><FONT color="gold">Gouvernement :</FONT></b><br>
 <br><li>L’IAB n’est pas relié à l’Union Européenne ou à l’ANSSI, ni à aucun autre acteur principal.</li>
 <br><li>Le site de l’Union Européenne est relié au Ministère de l’Économie, de l’Industrie et du Numérique via LégiFrance, et non directement. Le G29 influence donc la loi française directement, sans passer par le Ministère.</li>
 <br><li>Le site de la CNIL n’est pas relié au site du Ministère. Les liens entre les deux acteurs ne semblent donc pas si forts que cela.</li>
 <br><li>Le site de l’UDA n’est relié à aucun site des acteurs. Leur influence sur le Ministère et les entreprises annonceurs ne semble donc pas si grande.</li>
 <br><li>Les sites du gouvernement n'interviennent pas dans le réseau virtuel, le seul lien que l'on note est celui avec le moteur de recherche Google, ce qui paraît évident puisque la plupart des sites web sont étroitement liées à ce genre de sociétés de contenu. On peut donc en conclure qu'il n'ont pratiquement aucune influence sur internet.</li><br>
 
-<br><b>Utilisateurs : </b><br>
-<br><li>Les Internautes qui semblaient être directement touchés par cette controverse sont finalement inexistants sur le web. Il n'y a, non plus, aucune trace des données personnelles circulant sur internet.</li><br>
+<br><b><FONT color="violet">Utilisateurs :</FONT></b><br>
+<br><li>Les Internautes qui semblaient être directement touchés par cette controverse ne peuvent pas être représentés sur la cortographie du web. Ils gardent toutefois un rôle important puisque ceux sont eux qui sont ciblés par ces publicités.Il n'y a, non plus, aucune trace des données personnelles circulant sur internet.</li><br>
 
-<br><b>Bloqueurs de publicités : </b><br>
+<br><b><FONT color="magenta">Bloqueurs de publicités :</FONT></b><br>
 <br><li>Les logiciels bloqueurs de publicités sont plutôt reliés aux sociétés de l’Internet qu’aux sites web ou aux régies publicitaires. Cela semble logique, puisque les internautes accèdent à ces logiciels via ces sociétés de service.</li><br>
 
-<br><b>Régies publicitaires :</b><br>
+<br><b><FONT color="red">Régies publicitaires :</FONT></b><br>
 <br><li>Les régies publicitaires sont reliées aux sites web soit directement, soit préférentiellement via les sociétés de l’Internet telles que Google, Facebook,… . Les sociétés de service et les réseaux sociaux ont donc énormément de pouvoir sur le marché de la publicité en ligne, ce qui est normal, puisque ce sont ces sociétés qui permettent la diffusion des publicités. On le voit d’ailleurs bien à leur position centrale dans la cartographie web.</li><br>
 
-<br><b>Fournisseurs de contenu / Sociétés d'Internet :</b><br>
-<br><li>Ainsi, contrairement à ce que la carte heuristique décrit, les acteurs principaux du web sont les fournisseurs de contenu représentés notamment par les grosses sociétés d'Internet comme Google , Facebook ou Twitter. Ce sont eux qui sont au centre des informations et des données et qui détiennent la plus importante influence sur le web.<li><br>
+<br><b><FONT color="blue">Fournisseurs de contenu / Sociétés d'Internet :</FONT></b><br>
+<br><li>Ainsi, contrairement à ce que la carte heuristique décrit, les acteurs principaux du web sont les fournisseurs de contenu représentés notamment par les grosses sociétés d'Internet comme Google , Facebook ou Twitter. Ce sont eux qui sont au centre des informations et des données et qui détiennent la plus importante influence sur le web.</li><br>
 		</div>
 		</section>
 
@@ -586,7 +586,7 @@ Enfin, chaque site utilisant le système de traçage par cookies doit prévenir 
 			</div>
 			<div id="protectionpub" name="protectionpub">
 		<div class="row" style="padding:10px;">
-			<h3 class="centered" style="color:black;">Protégez vous des publicités ciblées ?</h3>
+			<h3 class="centered" style="color:black;">Protégez-vous des publicités ciblées ?</h3>
 			<div class="col-lg-4 centered">
 					<p><img src="assets/img/Interview/question3.jpg" width="400px" alt=""></p>
 				</div><!-- col-lg-4 -->
@@ -625,8 +625,8 @@ Enfin, chaque site utilisant le système de traçage par cookies doit prévenir 
 			<hr>
 		<h3 class="centered" style="color:black;">Interview d'un professeur d'informatique/réseaux de l'ISEN Brest</h3>
 			<hr>
-			<br> Nous avons approché un professeur de l'ISEN afin de s'interroger sur l'efficacité du filtrage de
-publicités sur un réseau moyen tel que l'ENT de l'ISEN Brest. <br>
+			<br><b> Nous avons approché un professeur de l'ISEN afin de s'interroger sur l'efficacité du filtrage de
+publicités sur un réseau moyen tel que l'ENT de l'ISEN Brest. </b><br>
 
 
 <br><b> - Vous devez sûrement faire face à de nombreuses publicités affectant les adresses mails.
@@ -637,11 +637,11 @@ Pouvez-vous nous donnez un ordre d'idée de ce chiffre ?</b><br>
 <br> Par exemple, sur 1017 messages qui sont passés en une journée environ, 30 ont été bloqués comme étant des spams , 84 ont été considérés comme des spams mais qui sont passés , 44  ont été considérés comme suspects, avec des problèmes dans leur protocole, et n'ont pas été bloqués, et 860 qui sont passés comme étant bons.
 Donc, ça fait à peu près 10% des messages qui sont analysés comme spams, mais ça ne veut pas dire que tout a été filtré. Encore ce matin on a reçu un message de phishing. C'est difficile de se faire une idée.»<br>
 
-<br><b> Quelles sont les principales publicités auxquelles vous avez affaire ?</b><br>
+<br><b> - Quelles sont les principales publicités auxquelles vous avez affaire ?</b><br>
 
 <br> « Je ne regarde même pas les mails publicitaires que je reçois. Il y a de tout et n'importe quoi. »<br>
 
-<br><b> Savez vous comment les données sont récupérées sur internet ,dans le but d'envoyer des publicités ciblées ?</b><br>
+<br><b> - Savez-vous comment les données sont récupérées sur internet ,dans le but d'envoyer des publicités ciblées ?</b><br>
 
 <br> « Soit ils (annonceurs) peuvent aspirer des sites web et récupérer les adresses mails s'il y en a, soit en envoyant des virus , des chevaux de trois qui permettent de récupérer l'information. La plupart des sociétés ne vont pas se servir d'outils techniques mais vont plutôt les acheter à quelqu'un d'autre qui les a récupérés à leur place . Je ne pense pas que ça se vend si cher que ça. Sur le web, on doit pouvoir acheter des fichiers entiers de données , d'adresses mails. On doit pouvoir en acheter de manières plus autorisées comme à Google ou à Facebook.
 Vous utilisez majoritairement tous les services de Google, ils savent donc tout sur vous. Chaque fois que vous surfer sur un site, que vous tapez une info, ils vont tout réutiliser. Pareil pour Facebook. Ils peuvent même s'échanger les données entre eux. Je ne sais pas jusqu'à quel niveau ça peut aller. Mais de toute façon, c'est en vous faisant signer les pages de conditions générales de leur site, qui changent régulièrement et que vous n'allez pas relire, qu'ils obtiennent le droit d'utiliser vos informations. »<br>
@@ -661,34 +661,34 @@ dites ciblées ?</b><br>
 			<hr>
 		<h3 class="centered" style="color:black;">Interview d'un étudiant de l'Isen Brest, créateur d'un site web d'échange de données pour des publicités ciblées      ( <a href="http://www.winpixies.com/mention.html" target="_blank">winpixies.com</a>)</h3>
 			<hr>
-			<br><b>Pourquoi as tu décidé de créer ce site web ?</b><br>
+			<br><b>- Pourquoi as tu décidé de créer ce site web ?</b><br>
 
-<br>Parce que le concept me plaisait et que cela pouvait potentiellement rapporter de l'argent.<br>
+<br>"Parce que le concept me plaisait et que cela pouvait potentiellement rapporter de l'argent."<br>
 
-<br><b>Quel est le concept ton site web ?</b><br>
+<br><b>- Quel est le concept ton site web ?</b><br>
 
-<br>Le concept est assez simple : l'utilisateur s'inscrit, répond à des sondages, visionne des publicités , regarde des vidéos ou directement des bannières. Ainsi, il gagne un certain nombre de points qu'il peut échanger contre de l'argent. <br>
+<br>"Le concept est assez simple : l'utilisateur s'inscrit, répond à des sondages, visionne des publicités , regarde des vidéos ou directement des bannières. Ainsi, il gagne un certain nombre de points qu'il peut échanger contre de l'argent." <br>
 
-<br><b>D'où proviennent ces sondages ?</b><br>
+<br><b>- D'où proviennent ces sondages ?</b><br>
 
-<br> Ce sont des entreprises spécialisées dans la publicité que je démarche pour afficher leurs publicités et leurs études de marché dans « winpixies ». Ce sont plus ou moins de la publicité ciblée pour chercher de nouveaux consommateurs. Les clients qui visitent mon site, regardent ces publicités et en fonction du nombre d'entre elles visionnées l'entreprise me paye une certaine somme dont un pourcentage est reversé aux utilisateurs. <br>
+<br> "Ce sont des entreprises spécialisées dans la publicité que je démarche pour afficher leurs publicités et leurs études de marché dans « winpixies ». Ce sont plus ou moins de la publicité ciblée pour chercher de nouveaux consommateurs. Les clients qui visitent mon site, regardent ces publicités et en fonction du nombre d'entre elles visionnées l'entreprise me paye une certaine somme dont un pourcentage est reversé aux utilisateurs." <br>
 
-<br><b>Y a t-il beaucoup de sites similaires à celui que tu as créé ?</b><br>
+<br><b>- Y a t-il beaucoup de sites similaires à celui que tu as créé ?</b><br>
 
-<br>En France, il n'y en a pas beaucoup. A mon avis, moins de 5 sites connus. Par contre aux États-Unis on en compte bien plus de cent. <br>
+<br>"En France, il n'y en a pas beaucoup. A mon avis, moins de 5 sites connus. Par contre aux États-Unis on en compte bien plus de cent." <br>
 
-<br><b>Comment perçois-tu l'évolution de ces sites dans les prochaines années ? Est-ce qu'ils fonctionnent plutôt bien ? Est-ce que les gens sont intéressés ?</b><br>
+<br><b>- Comment perçois-tu l'évolution de ces sites dans les prochaines années ? Est-ce qu'ils fonctionnent plutôt bien ? Est-ce que les gens sont intéressés ?</b><br>
 
-<br>En France pour le moment, le public n'est pas encore assez intéressé par ce système là, il ne le connaît que très peu. C'est vrai qu'aujourd'hui, quand on leur parle de gagner de l'argent sur internet, les Français sont réticents et partent du principe que c'est une arnaque. Donc, pour l'instant, le public n'est pas encore extrêmement grand mais dans certains pays comme les USA, il est assez large. <br>
+<br>"En France pour le moment, le public n'est pas encore assez intéressé par ce système là, il ne le connaît que très peu. C'est vrai qu'aujourd'hui, quand on leur parle de gagner de l'argent sur internet, les Français sont réticents et partent du principe que c'est une arnaque. Donc, pour l'instant, le public n'est pas encore extrêmement grand mais dans certains pays comme les USA, il est assez large." <br>
 
-<br><b>Pourquoi créer ce genre de sites ? Quel est leur impact sur la société ?</b><br>
+<br><b>- Pourquoi créer ce genre de sites ? Quel est leur impact sur la société ?</b><br>
 
-<br> Alors, c'est assez simple. Il faut savoir qu'aujourd'hui la plupart des personnes sont réticentes à cliquer dessus. Mais dans ce genre de site , les internautes sont directement intéressés par la publicité et notamment par se faire un petit revenu grâce à ce concept.
-Selon moi , cela permet aux utilisateurs d'être plus réceptifs aux publicités et plus attentifs, du fait qu'ils récupèrent de l'argent grâce à ça. <br>
+<br> "Alors, c'est assez simple. Il faut savoir qu'aujourd'hui la plupart des personnes sont réticentes à cliquer dessus. Mais dans ce genre de site , les internautes sont directement intéressés par la publicité et notamment par se faire un petit revenu grâce à ce concept.
+Selon moi , cela permet aux utilisateurs d'être plus réceptifs aux publicités et plus attentifs, du fait qu'ils récupèrent de l'argent grâce à ça." <br>
 
-<br><b>Est-ce que toi personnellement tu vas cliquer sur ces publicités ciblées lorsque tu surfes sur Internet ?</b><br>
+<br><b>- Est-ce que toi personnellement tu vas cliquer sur ces publicités ciblées lorsque tu surfes sur Internet ?</b><br>
 
-<br>Je clique très peu sur les publicités. Après, si on me propose une rémunération en échange de visionner ces publicités ou même d'ouvrir un mail (je reçois des spams tous les jours !), cela m'intéresserait d'avantage.<br>
+<br>"Je clique très peu sur les publicités. Après, si on me propose une rémunération en échange de visionner ces publicités ou même d'ouvrir un mail (je reçois des spams tous les jours !), cela m'intéresserait d'avantage."<br>
 		</div>
 
 
@@ -700,6 +700,13 @@ Selon moi , cela permet aux utilisateurs d'être plus réceptifs aux publicités
 			<hr>
 				<div class="row">
 			<br>
+			<div class="container">
+			<b><u>Hors-limite blacklist :</b></u><br><br>
+			Une hors-limite blacklist permet à l'utilisateur de ne pas recevoir de spams. La blacklist fait appel à un/des site(s) extérieur(s) pour y remédier.<br><br>
+
+			<b><u>Applet :</b></u><br><br>
+			Un applet ou un applet Java est un logiciel qui s'exécute dans la fenêtre d'un navigateur web.<br>
+		</div>
 		</div>
 
 
