Jeudi Milieu d'aprem

--- a/Site/index.html
+++ b/Site/index.html
@@ -41,13 +41,13 @@
       <div class="container">
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#home" class="smoothScroll"><b>Accueil</b></a></li>
-			<li> <a href="#about" class="smoothScroll"><b>Introduction</b></a></li>
+            <li> <a href="#about" class="smoothScroll"><b>Introduction</b></a></li>
 			<li> <a href="#presentation" class="smoothScroll"><b>Présentation de la Controverse</b></a></li>
 			<li> <a href="#acteurs" class="smoothScroll"><b>Présentation des acteurs</b></a></li>
 			<li> <a href="#cartographie" class="smoothScroll"><b>Cartographie</b></a></li>
 			<li> <a href="#interview" class="smoothScroll"><b>Interwiews/Sondage</b></a></li>
 			<li> <a href="#lexique" class="smoothScroll"><b>Lexique</b></a></li>
+              <li> <a href="#bibliographie" class="smoothScroll"><b>Bibliographie</b></a></li>
 			<li> <a href="#contact" class="smoothScroll"><b>Contact</b></a></li>
         </div><!--/.nav-collapse -->
       </div>
@@ -568,8 +568,9 @@ Enfin, chaque site utilisant le système de traçage par cookies doit prévenir 
 		</section>
 
 		</div>
-
+            <section class="section-divider textdivider centered">
 		<div id="interview">
+
 			<br><br>
 			<h1 class="centered" style="color:black;">Interviews/Sondage</h1>
 			<div class="row" style="padding:10px;">
@@ -619,9 +620,12 @@ Enfin, chaque site utilisant le système de traçage par cookies doit prévenir 
 					<p><img src="assets/img/Interview/question9.jpg" width="400px" alt=""></p>
 				</div><!-- col-lg-6 -->
 			</div>
+            </div>
+            </section>
 		</div>
 
 		<div class="container">
+            <section class="section-divider textdivider centered">
 			<hr>
 		<h3 class="centered" style="color:black;">Interview d'un professeur d'informatique/réseaux de l'ISEN Brest</h3>
 			<hr>
@@ -656,8 +660,10 @@ Vous avez aussi ce que l'on appelle des hors limites black list. A chaque fois q
 dites ciblées ?</b><br>
 
 <br> « (rire) De toute façon, les publicités liées à Google , à moins que vous vouliez utiliser autre chose, ce qui est difficile, car le moteur de recherche est relativement bon, vous n'y échappez pas. Après il y a d'autre alternative, pour les mails, il vaut mieux avoir plusieurs adresses mails . Par exemple, vous utilisez une adresse mail pour acheter un billet d'avion et une autre à usage personnel. De toute façon, vous voyez bien que quand vous vous enregistrez quelque part, généralement vous recevez des rafales de spams par la suite. Ou alors vous écrivez des cartes postales ou des lettres (rire). »<br><br>
+            </section>
 		</div>
 		<div class="container">
+            <section class="section-divider textdivider centered">
 			<hr>
 		<h3 class="centered" style="color:black;">Interview d'un étudiant de l'Isen Brest, créateur d'un site web d'échange de données pour des publicités ciblées      ( <a href="http://www.winpixies.com/mention.html" target="_blank">winpixies.com</a>)</h3>
 			<hr>
@@ -689,10 +695,12 @@ Selon moi , cela permet aux utilisateurs d'être plus réceptifs aux publicités
 <br><b>- Est-ce que toi personnellement tu vas cliquer sur ces publicités ciblées lorsque tu surfes sur Internet ?</b><br>
 
 <br>"Je clique très peu sur les publicités. Après, si on me propose une rémunération en échange de visionner ces publicités ou même d'ouvrir un mail (je reçois des spams tous les jours !), cela m'intéresserait d'avantage."<br>
+            </section>
 		</div>
 
 
 		<div id="lexique">
+            <section class="section-divider textdivider centered">
 			<br><br>
 			<hr>
 			<h1 class="centered" style="color:black;">Lexique</h1>
@@ -705,18 +713,41 @@ Selon moi , cela permet aux utilisateurs d'être plus réceptifs aux publicités
 			Une hors-limite blacklist permet à l'utilisateur de ne pas recevoir de spams. La blacklist fait appel à un/des site(s) extérieur(s) pour y remédier.<br><br>
 
 			<b><u>Applet :</b></u><br><br>
-			Un applet ou un applet Java est un logiciel qui s'exécute dans la fenêtre d'un navigateur web.<br>
+			Un applet ou un applet Java est un logiciel qui s'exécute dans la fenêtre d'un navigateur web.<br><br>
+
+            <b><u>Spam :</b></u><br><br>
+			Un courrier électronique non sollicité, distribué en grande quantité à des fins publicitaires.<br><br>
+
+            <b><u>Phishing :</b></u><br><br>
+			Une technique utilisée par les fraudeurs pour obtenir des renseignements personnels afin d'effectuer une usurpation d'identité. Cela consiste à faire croire aux victimes qu'ils s'adressent à un interlocuteur de confiance tel qu'une banque ou une administration afin de le pousser à communiquer des renseignements importants (identifiants, mots de passe,...).<br>
 		</div>
 		</div>
-
-
+		</div>
+            </section>
+		</div>
+        <div id="bibliographie">
+            <section class="section-divider textdivider centered">
+            <br><br>
+			<hr>
+			<h1 class="centered" style="color:black;">Bibliographie</h1>
+				<div class="row" style="padding:10px;">
+			<hr>
+				<div class="row">
+			<br>
+			<div class="container">
+			<a href="https://docs.google.com/spreadsheets/d/1qc1kpdNG2LmtctFj-WuJvJpbIkheo6s3s9VBtAOUIrQ/edit?usp=sharing" target="blank">Tableau des sources</a>
+		</div>
+		</div>
+		</div>
+            </section>
+		</div>
 		<!-- ==== SECTION DIVIDER6 ==== -->
 		<section class="section-divider textdivider divider6">
 			<div class="container">
 				<h1 style="color:black;"><b>Créé à l'école d'ingénieurs ISEN, BREST</b></h1>
 				<hr style="color:black;">
 				<p style="color:black;"><b>20 rue Cuirassé de Bretagne, 29200 Brest</b></p>
-				<p><a class="icon icon-facebook" href="https://www.facebook.com/pages/ISEN-Brest/260147670689499?fref=ts" target="_blank"><b>acebook</b></a></p>
+				<p><a class="icon icon-facebook" href="https://www.facebook.com/pages/ISEN-Brest/260147670689499?fref=ts" target="blank"><b>acebook</b></a></p>
 			</div><!-- container -->
 		</section><!-- section -->
 
