Jeudi Milieu-fin d'aprem

--- a/Site/index.html
+++ b/Site/index.html
@@ -46,8 +46,7 @@
 			<li> <a href="#acteurs" class="smoothScroll"><b>Présentation des acteurs</b></a></li>
 			<li> <a href="#cartographie" class="smoothScroll"><b>Cartographie</b></a></li>
 			<li> <a href="#interview" class="smoothScroll"><b>Interwiews/Sondage</b></a></li>
-			<li> <a href="#lexique" class="smoothScroll"><b>Lexique</b></a></li>
-              <li> <a href="#bibliographie" class="smoothScroll"><b>Bibliographie</b></a></li>
+			<li> <a href="#lexique" class="smoothScroll"><b>Lexique/Biblio</b></a></li>
 			<li> <a href="#contact" class="smoothScroll"><b>Contact</b></a></li>
         </div><!--/.nav-collapse -->
       </div>
@@ -68,7 +67,8 @@
 	<div id="greywrap">
 		<div class="container" id="about" name="about">
 			<div class="row white">
-				<h1 class="centered">Introduction</h1>
+                <hr>
+				<h1 class="centered">Introduction</h1><br/>
 				<hr>
 				<div class="col-lg-12 centered">
 				<p  style="color:black;">Sur Internet, nombre de sites (si ce n'est tous) désormais usent de publicités généralement ciblées afin de rémunérer leurs sites. D'ailleurs, d'après une étude réalisée au Royaume-Uni, <a href="#nopub" class="smoothScroll" style=" color:#3498db;">un Internet sans pub coûterait 170€ par an et par utilisateur.</a></p>
@@ -117,7 +117,8 @@
 <div class="container" id="partie1" name="partie1">
 			<div class="row white">
 			<br>
-				<h1 class="centered">LA PUBLICITE CIBLEE KEZAKO ?</h1>
+                <hr>
+				<h1 class="centered">LA PUBLICITE CIBLEE KEZAKO ?</h1><br/>
 				<hr>
 				<div class="col-lg-12 centered">
 				<p  style="color:black;text-align:left;">
@@ -179,6 +180,7 @@ Les publicités s'affichent grâce à un partage de l'espace visuel commandé pa
 <div class="container" id="partie2" name="partie2">
 			<div class="row">
 			<br>
+                <hr>
 				<h1 class="centered">LA LEGISLATION SUR LES PUBLICITES CIBLEES</h1>
 				<hr>
 				<div class="col-lg-12 centered">
@@ -226,7 +228,8 @@ Enfin, chaque site utilisant le système de traçage par cookies doit prévenir 
 <div class="container" id="partie3" name="partie3">
 			<div class="row white">
 			<br>
-				<h1 class="centered">LES MOYENS DE S'AFFRANCHIR DE CES PUBLICITES</h1>
+                <hr>
+				<h1 class="centered">LES MOYENS DE S'AFFRANCHIR DE CES PUBLICITES</h1><br/>
 				<hr>
 				<div class="col-lg-12 centered">
 				<p  style="color:black;text-align:left;">
@@ -246,7 +249,8 @@ Enfin, chaque site utilisant le système de traçage par cookies doit prévenir 
 
 <!-- ==== SECTION DIVIDER4 ==== -->
 		<section class="section-divider1 textdivider divider4" id="acteurs" name="acteurs">
-			<h1 class="centered" style="color:black;">Présentation des acteurs</h1>
+            <hr>
+			<h1 class="centered" style="color:black;">Présentation des acteurs</h1><br/><br/>
 			<hr>
 			<div class="row" style="padding:10px;">
 					<div class="col-lg-offset-1 col-lg-4">
@@ -571,8 +575,9 @@ Enfin, chaque site utilisant le système de traçage par cookies doit prévenir 
             <section class="section-divider textdivider centered">
 		<div id="interview">
 
-			<br><br>
-			<h1 class="centered" style="color:black;">Interviews/Sondage</h1>
+			<br>
+            <hr>
+			<h1 class="centered" style="color:black;">Interviews/Sondage</h1><br/><br/>
 			<div class="row" style="padding:10px;">
 			<hr>
 			<h3 class="centered" style="color:black;">Sondage réalisé à l'ISEN concernant les bloqueurs de publicités</h3>
@@ -701,9 +706,9 @@ Selon moi , cela permet aux utilisateurs d'être plus réceptifs aux publicités
 
 		<div id="lexique">
             <section class="section-divider textdivider centered">
-			<br><br>
+			<br>
 			<hr>
-			<h1 class="centered" style="color:black;">Lexique</h1>
+			<h1 class="centered" style="color:black;">Lexique</h1><br/><br/>
 				<div class="row" style="padding:10px;">
 			<hr>
 				<div class="row">
@@ -720,22 +725,8 @@ Selon moi , cela permet aux utilisateurs d'être plus réceptifs aux publicités
 
             <b><u>Phishing :</b></u><br><br>
 			Une technique utilisée par les fraudeurs pour obtenir des renseignements personnels afin d'effectuer une usurpation d'identité. Cela consiste à faire croire aux victimes qu'ils s'adressent à un interlocuteur de confiance tel qu'une banque ou une administration afin de le pousser à communiquer des renseignements importants (identifiants, mots de passe,...).<br>
-		</div>
-		</div>
-		</div>
-            </section>
-		</div>
-        <div id="bibliographie">
-            <section class="section-divider textdivider centered">
-            <br><br>
-			<hr>
-			<h1 class="centered" style="color:black;">Bibliographie</h1>
-				<div class="row" style="padding:10px;">
-			<hr>
-				<div class="row">
-			<br>
-			<div class="container">
-			<a href="https://docs.google.com/spreadsheets/d/1qc1kpdNG2LmtctFj-WuJvJpbIkheo6s3s9VBtAOUIrQ/edit?usp=sharing" target="blank">Tableau des sources</a>
+
+            <br/><b>Bibliographie : </b><a href="https://docs.google.com/spreadsheets/d/1qc1kpdNG2LmtctFj-WuJvJpbIkheo6s3s9VBtAOUIrQ/edit?usp=sharing" target="blank">Tableau des sources</a>
 		</div>
 		</div>
 		</div>
