--- a/Site/index.html
+++ b/Site/index.html
@@ -534,7 +534,7 @@ Enfin, chaque site utilisant le système de traçage par cookies doit prévenir 
 		<section class="section-divider textdivider centered">
 				<div class="Carto" style="padding:10px;">
 
-                    <img src="assets/img/test.png" style="max-width : 1500px;max-height : 700px;"/>
+                    <img src="assets/img/test2.png" style="max-width : 1500px;max-height : 700px;"/>
 
 		<div class="container">
 			<hr>
